--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Application_B</string>
+    <string name="forTimerpart_1">Application B is not a stand-alone application and will be closed after </string>
+    <string name="forTimerpart_2">seconds</string>
 </resources>
