--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
-    <string name="app_name">Application_B</string>
+    <string name="app_name">Application B</string>
     <string name="forTimerpart_1">Application B is not a stand-alone application and will be closed after </string>
     <string name="forTimerpart_2">seconds</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
