--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Додаток Б</string>
     <string name="forTimerpart_1">Додаток Б не є самостійним додатком і буде закрито через </string>
     <string name="forTimerpart_2">секунд</string>
+    <string name="massageDel">Видалено</string>
 </resources>
